fixed spacing

--- a/my-app/src/Work.css
+++ b/my-app/src/Work.css
@@ -85,6 +85,7 @@
     margin-bottom: 10px;
     display: flex;
     align-items: center;
+    gap: 10px;
   }
   
   .experience-details .description {
